<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/idme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <include layout="@layout/widowstitle"/>

        <ImageButton android:id="@+id/facebook_login"
            android:src="@drawable/facebook_login"
            android:layout_width="316dp"
            android:layout_height="104dp"
            style="?android:attr/borderlessButtonStyle"
            android:scaleType="centerInside"
            android:layout_gravity="center" />



            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin">
                    <ImageView
                        android:layout_width="@dimen/icon_width"
                        android:layout_height="@dimen/icon_height"
                        android:id="@+id/login_username_icon"
                        android:src="@mipmap/username_ic"/>

                    <EditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_userName"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_toRightOf="@+id/login_username_icon"
                        android:singleLine="true" />





                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin">

                    <ImageView
                        android:layout_width="@dimen/icon_width"
                        android:layout_height="@dimen/icon_height"
                        android:id="@+id/login_password3"
                        android:src="@mipmap/password_ic"/>

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:layout_toRightOf="@id/login_password3"
                        android:singleLine="true" />


                </RelativeLayout>



                <ImageButton android:id="@+id/login_btn"
                    android:src="@drawable/verify_not"
                    android:layout_width="316dp"
                    android:layout_height="96dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:id="@+id/forgot_password"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_not_already"
                        android:id="@+id/not_already"
                        android:layout_gravity="center_horizontal"
                        android:paddingRight="3dp"
                        android:clickable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_join"
                        android:id="@+id/text_join"
                        android:layout_gravity="center_horizontal"
                        android:clickable="true"
                        android:textColor="@color/for_alert_login"/>

                </LinearLayout>



            </LinearLayout>

    </LinearLayout>
</FrameLayout>