<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/FrameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        />

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <include layout="@layout/widowstitle" />

    <ImageButton android:id="@+id/facebook_login"
        android:src="@drawable/facebook_login"
        android:layout_width="316dp"
        android:layout_height="104dp"
        style="?android:attr/borderlessButtonStyle"
        android:scaleType="centerInside"
        android:layout_gravity="center" />


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/form_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:src="@mipmap/email_ic"
                    android:id="@+id/email_ic"/>
                <EditText
                    android:id="@+id/regemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionNext|actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_toRightOf="@+id/email_ic"
                    android:singleLine="true" />



            </RelativeLayout>





            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/form_margin">

                <EditText
                    android:id="@+id/regusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_userName"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_toRightOf="@+id/username_ic"
                    android:singleLine="true" />

                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:src="@mipmap/username_ic"
                    android:id="@+id/username_ic"/>



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/form_margin">
                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:src="@mipmap/password_ic"
                    android:id="@+id/regpassword_icon5" />


                <EditText
                    android:id="@+id/regpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_toEndOf="@+id/regpassword_icon5"
                    android:layout_toRightOf="@+id/regpassword_icon5" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/form_margin">

                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:src="@mipmap/password_ic"
                    android:id="@+id/password_icon2" />

                <EditText
                    android:id="@+id/regpassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password_repeat"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_toRightOf="@+id/password_icon2"
                    android:singleLine="true" />


            </RelativeLayout>

            <ImageButton android:id="@+id/register_btn"
                android:src="@drawable/verify_not"
                android:layout_width="316dp"
                android:layout_height="96dp"
                style="?android:attr/borderlessButtonStyle"
                android:scaleType="centerInside"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_already"
                android:id="@+id/text_already"
                android:layout_gravity="center_horizontal"
                android:paddingRight="3dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:id="@+id/login_already"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:textColor="@color/for_alert_login"/>

            </LinearLayout>



        </LinearLayout>

</LinearLayout>
</FrameLayout>